moved safe mode stuff to cheat safety tab

--- a/langs/ca-ES.json
+++ b/langs/ca-ES.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Elimina l'ajust a 0% quan estableixes el volum al 3% o menys",
   "UNIVERSAL/HACK_COMPACT_LISTS": "Llistes Compactes",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Redueix l'alçada de les llistes de nivells i els comentaris de perfil",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Mode Segur Automàtic",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Activa el Mode Segur si s'han utilitzat trucs en un intent",
   "UNIVERSAL/HACK_FAST_CHESTS": "Cofres Ràpids",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Accelera l'animació del cofre",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Carregar Àudio a la Memòria",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Atura l'esvaïment de les cançons. Creat per Beat",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sense Transició",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Redueix el temps de transició d'escena a 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Mode Segur",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Desactiva el progrés, compleció i verificació de nivells",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Emergent de Mode Segur",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Adverteix abans d'entrar a un nivell si hi ha trucos activats",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Llistes Transparents",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Elimina el fons de les vistes de llista",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Octaves",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Durada (s)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Durada",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Mode Segur Automàtic",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Activa el Mode Segur si s'han utilitzat trucs en un intent",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Mode Segur",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Desactiva el progrés, compleció i verificació de nivells",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Emergent de Mode Segur",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Adverteix abans d'entrar a un nivell si hi ha trucos activats",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
