--- a/langs/de-CH.json
+++ b/langs/de-CH.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Removes snapping to 0% when setting volume to 3% or below",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Automatische Sicherheits Modus",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Macht Sicherheitsmodus aa wenn Cheats aktiviert send",
   "UNIVERSAL/HACK_FAST_CHESTS": "Schnelli Chischte",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Verschnellert d Chischte-Animation",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Kei Übergang",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Setzt d Übergangsszene 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Sicherheitsmodus",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Deaktiviert Fortschritt, Beende & Verifiziere fo Level",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Sicherheitsmodus Popup",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Warnt dech defor es Level z betrete wenn Cheats aktiviert hesch",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oktave",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automatische Sicherheits Modus",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Macht Sicherheitsmodus aa wenn Cheats aktiviert send",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Sicherheitsmodus",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Deaktiviert Fortschritt, Beende & Verifiziere fo Level",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Sicherheitsmodus Popup",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Warnt dech defor es Level z betrete wenn Cheats aktiviert hesch",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
