--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Entfernt das Schnappen auf 0%, wenn Lautstärke auf 3% oder weniger gesetzt wird",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Auto Sicherer Modus",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Aktiviert den sicheren Modus automatisch, wenn Cheats aktiviert sind",
   "UNIVERSAL/HACK_FAST_CHESTS": "Schnellere Kisten",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Beschleunigt die Animation von Kisten",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Keine Übergänge",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Deaktiviert Szenenübergänge",
-  "UNIVERSAL/HACK_SAFE_MODE": "Sicherer Modus",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Deaktiviert Fortschritt, Abschluss und Verifizierung von Levels",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Sicherer Modus-Popup",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Warnung vor Betreten eines Levels mit aktivierten Cheats",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oktaven",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Auto Sicherer Modus",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Aktiviert den sicheren Modus automatisch, wenn Cheats aktiviert sind",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Sicherer Modus",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Deaktiviert Fortschritt, Abschluss und Verifizierung von Levels",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Sicherer Modus-Popup",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Warnung vor Betreten eines Levels mit aktivierten Cheats",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
