--- a/langs/el-GR.json
+++ b/langs/el-GR.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Αφαιρεί το κούμπωμα στο 0% όταν ρυθμίζει την ένταση στο 3% ή χαμηλότερο",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Αυτόματη ασφαλή λειτουργία",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Ενεργοποιεί την Ασφαλή λειτουργία μόνο όταν είναι ενεργοποιημένες οι κλεψιές",
   "UNIVERSAL/HACK_FAST_CHESTS": "Γρήγορα σεντούκια",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Κάνει το animation των σεντουκιών πιο γρήγορο",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Χωρίς Μετάβαση",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Συντόμευση του χρόνου μετάβασης σκηνής σε 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Ασφαλής λειτουργία",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Απενεργοποιεί την πρόοδο, την ολοκλήρωση και την επαλήθευση των επιπέδων",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Αναδυόμενο παράθυρο ασφαλούς λειτουργίας",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Προειδοποιεί πριν εισαγάγετε ένα επίπεδο εάν είναι ενεργοποιημένα τα cheat",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Οκτάβες",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Αυτόματη ασφαλή λειτουργία",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Ενεργοποιεί την Ασφαλή λειτουργία μόνο όταν είναι ενεργοποιημένες οι κλεψιές",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Ασφαλής λειτουργία",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Απενεργοποιεί την πρόοδο, την ολοκλήρωση και την επαλήθευση των επιπέδων",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Αναδυόμενο παράθυρο ασφαλούς λειτουργίας",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Προειδοποιεί πριν εισαγάγετε ένα επίπεδο εάν είναι ενεργοποιημένα τα cheat",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
