--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Removes snapping to 0% when setting volume to 3% or below",
   "UNIVERSAL/HACK_COMPACT_LISTS": "Compact Lists",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Reduces the height of level lists and profile comments",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Auto Safe Mode",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Triggers Safe Mode if cheats have been used in an attempt",
   "UNIVERSAL/HACK_FAST_CHESTS": "Fast Chests",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Speeds up the chest animation",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Load Audio to Memory",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Stops songs fading out. By Beat",
   "UNIVERSAL/HACK_NO_TRANSITION": "No Transition",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Shortens scene transition time to 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Safe Mode",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Disables progress, completion & verification of levels",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Safe Mode Popup",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Warns before entering a level if cheats are enabled",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Transparent Lists",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Removes the background from list views",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Octaves",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Duration (s)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Duration",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
+  "CHEAT_SAFETY": "Cheat Safety",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Auto Safe Mode",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Triggers Safe Mode if cheats have been used in an attempt",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Safe Mode",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Disables progress, completion & verification of levels",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Safe Mode Popup",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Warns before entering a level if cheats are enabled",
   "INTERFACE": "Interface",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "Hide Endscreen Cheats",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Hide Endscreen Extras",
