--- a/langs/es-CO.json
+++ b/langs/es-CO.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Quita el ajuste automático a 0% cuando el volumen es 3% o menos",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Activa el Modo Seguro si se usaron trucos en un intento",
   "UNIVERSAL/HACK_FAST_CHESTS": "Cofres Rápidos",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Acelera la animación del cofre",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sin Transición",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Acorta el tiempo de transición de escena a 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Modo Seguro",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Desactiva el progreso, la finalización y la verificación de niveles",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Pop-up de Modo Seguro",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Advierte antes de entrar a un nivel si los trucos están activados",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Listas Transparentes",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Quita el fondo de las vistas de lista",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Octavas",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Duración (s)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Duración",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Activa el Modo Seguro si se usaron trucos en un intento",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Modo Seguro",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Desactiva el progreso, la finalización y la verificación de niveles",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Pop-up de Modo Seguro",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Advierte antes de entrar a un nivel si los trucos están activados",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
