--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Elimina el ajuste automático a 0% cuando el volumen es 3% o menor",
   "UNIVERSAL/HACK_COMPACT_LISTS": "Listas compactas",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Reduce la altura de las listas de niveles y de los comentarios de los perfiles",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Modo seguro automático",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Activa el modo seguro cuando algún hack esté activado",
   "UNIVERSAL/HACK_FAST_CHESTS": "Cofres rápidos",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Acelera la animación de los cofres",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Cargar Audio en la memoria",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Deshabilita el efecto de desvanecimiento de las canciones. Hecho por Beat",
   "UNIVERSAL/HACK_NO_TRANSITION": "Desactivar transiciones",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Desactiva la transición entre escenas",
-  "UNIVERSAL/HACK_SAFE_MODE": "Modo seguro",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Desactiva el progreso y completación de niveles",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Aviso de modo seguro",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Informa antes de entrar a un nivel si hay hacks activados",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Listas transparentes",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Desactiva el fondo de las listas",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Octavas",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Duración (s)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Duración",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Modo seguro automático",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Activa el modo seguro cuando algún hack esté activado",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Modo seguro",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Desactiva el progreso y completación de niveles",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Aviso de modo seguro",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Informa antes de entrar a un nivel si hay hacks activados",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
