--- a/langs/es-MX.json
+++ b/langs/es-MX.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Elimina el ajuste a 0% cuando se ajusta el volumen a 3% o menos.",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Activa el modo seguro sólo cuando los trucos están activados.",
   "UNIVERSAL/HACK_FAST_CHESTS": "Apertura Rápida de Cofres",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Acelera la animación de los cofres.",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sin Transición",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Elimina el efecto de transición entre menús.",
-  "UNIVERSAL/HACK_SAFE_MODE": "Modo Seguro",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Desactiva el progreso, finalización y verificación de niveles.",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Aviso de Modo Seguro",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Avisa antes de entrar en un nivel si hay trampas activadas.",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Octavas",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Activa el modo seguro sólo cuando los trucos están activados.",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Modo Seguro",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Desactiva el progreso, finalización y verificación de niveles.",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Aviso de Modo Seguro",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Avisa antes de entrar en un nivel si hay trampas activadas.",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
