--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Ozentasuna %3 edo gutxiago ezartzean, %0-ko egokitzea kentzen du",
   "UNIVERSAL/HACK_COMPACT_LISTS": "Zerrenda Txikituak",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Maila-zerrenden eta profil-iruzkinen garaiera txikitzen ditu",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Auto-Modu Segurua",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Saiakera batean tranpak erabili badira, modu Segurua pizten du",
   "UNIVERSAL/HACK_FAST_CHESTS": "Altxor Bizkorrak",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Altxorren animazioa bizkortzen du",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Audioak Memorian Kargatu",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Abestiak desagertaraztea gelditzen ditu. Beat egindakoa",
   "UNIVERSAL/HACK_NO_TRANSITION": "Transiziorik Ez",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Agertokien transizio-denbora 0 segundura laburtzen du",
-  "UNIVERSAL/HACK_SAFE_MODE": "Modu Segurua",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Mailetan aurrerapenak, gainditzeak eta egiaztatzeak desgaitzen ditu",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Modu Seguruaren Abisua",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Maila batean sartu aurretik ohartarazten du tranpak gaituta badaude",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Zerrenda Gardenak",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Zerrendetako atzealdea kentzen du.",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Zortzidunak",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Iraupena (s)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Iraupena",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Auto-Modu Segurua",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Saiakera batean tranpak erabili badira, modu Segurua pizten du",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Modu Segurua",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Mailetan aurrerapenak, gainditzeak eta egiaztatzeak desgaitzen ditu",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Modu Seguruaren Abisua",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Maila batean sartu aurretik ohartarazten du tranpak gaituta badaude",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
