--- a/langs/fi-FI.json
+++ b/langs/fi-FI.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Poistaa napsahtamisen 0 %:iin, kun äänenvoimakkuus asetetaan 3 %:iin tai alle",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Automaattinen Turvallinen Tila",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Ottaa turvallisen tilan käyttöön vain, kun huijaukset ovat käytössä",
   "UNIVERSAL/HACK_FAST_CHESTS": "Nopeat Arkut",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Nopeuttaa arkun animaation",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Ei Siirtymistä",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Lyhentää scenen siirtymäajan nollaan",
-  "UNIVERSAL/HACK_SAFE_MODE": "Turvallinen Tila",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Poistaa käytöstä tasojen edistymisen, suorittamisen ja vahvistuksen",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Turvallinen Tila Popup",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Varoittaa ennen tasolle siirtymistä, jos huijaukset ovat käytössä",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oktaavit",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automaattinen Turvallinen Tila",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Ottaa turvallisen tilan käyttöön vain, kun huijaukset ovat käytössä",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Turvallinen Tila",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Poistaa käytöstä tasojen edistymisen, suorittamisen ja vahvistuksen",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Turvallinen Tila Popup",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Varoittaa ennen tasolle siirtymistä, jos huijaukset ovat käytössä",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
