--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Enlève le snapping à 0% lorsque le volume est à 3% ou moins",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Mode Safe Auto",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Active automatiquement le Mode Safe uniquement lorsque les cheats sont activés",
   "UNIVERSAL/HACK_FAST_CHESTS": "Coffres rapides",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Accélère l'animation d'ouverture des coffres",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Aucune transition",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Réduit le temps de transition entre les menus à 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Mode Safe",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Désactive la progression, la complétion et la vérification des niveaux",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Alerte du Mode Safe",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Avertit avant d'entrer dans un niveau si des cheats sont activés",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Listes transparentes",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Enlève l'arrière plan des menus de listes",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Octaves ",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Durée (s) ",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Durée ",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Mode Safe Auto",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Active automatiquement le Mode Safe uniquement lorsque les cheats sont activés",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Mode Safe",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Désactive la progression, la complétion et la vérification des niveaux",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Alerte du Mode Safe",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Avertit avant d'entrer dans un niveau si des cheats sont activés",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
