--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "3%-on alulra is lehet tenni a hangerőt",
   "UNIVERSAL/HACK_COMPACT_LISTS": "Kompakt Listák",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Ezzel kompaktabb lesz a lista",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Auto Biztonságos Mód",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Bekapcsolja a Biztonságos Módot, de csak akkor, ha be vannak kapcsolva csalások",
   "UNIVERSAL/HACK_FAST_CHESTS": "Gyors ládák",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "A ládák nyitó animációját felgyorsítja",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Zene a memóriában",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Ezzel nem fog elhalványulni a zene",
   "UNIVERSAL/HACK_NO_TRANSITION": "Átmenet",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Két jelenet közütti átmenet instant lesz",
-  "UNIVERSAL/HACK_SAFE_MODE": "Bitonságos Mód",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Kikapcsolja a haladást, verifikációt, es a pályák kivitelét",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Biztonságos Mód Popup",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Figyelmeztet arra hogy be van kapcsolva a biztonságos mód, mielőtt belép a pályába",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Átlátszó listák",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Átlátszóvá teszi a pályalistákat",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oktáv",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Duráció",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Duráció",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "ms",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Auto Biztonságos Mód",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Bekapcsolja a Biztonságos Módot, de csak akkor, ha be vannak kapcsolva csalások",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Bitonságos Mód",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Kikapcsolja a haladást, verifikációt, es a pályák kivitelét",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Biztonságos Mód Popup",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Figyelmeztet arra hogy be van kapcsolva a biztonságos mód, mielőtt belép a pályába",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
