--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Rimuove l'aggancio allo 0% quando si imposta il volume sotto al 3%",
   "UNIVERSAL/HACK_COMPACT_LISTS": "Liste Compatte",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Riduce l'altezza dei livelli nelle liste e nei commenti",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Modalità Sicura Automatica",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Abilita la Modalità Sicura solo quando i cheat sono attivi",
   "UNIVERSAL/HACK_FAST_CHESTS": "Casse Veloci",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Accelera l'animazione delle casse",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Carica Audio alla Memoria",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Le canzoni a fine livello smettono di interrompersi",
   "UNIVERSAL/HACK_NO_TRANSITION": "Nessuna Transizione",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Riduce a 0s il tempo di transizione tra le scene",
-  "UNIVERSAL/HACK_SAFE_MODE": "Modalità Sicura",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Disabilita i progressi, il completamento e la verifica dei livelli",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Popup Modalità Sicura",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Avvisa prima di entrare in un livello se i cheat sono attivi",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Liste Trasparenti",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Rimuove lo sfondo dalle liste",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Ottave",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Modalità Sicura Automatica",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Abilita la Modalità Sicura solo quando i cheat sono attivi",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Modalità Sicura",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Disabilita i progressi, il completamento e la verifica dei livelli",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Popup Modalità Sicura",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Avvisa prima di entrare in un livello se i cheat sono attivi",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
