--- a/langs/ja-JP.json
+++ b/langs/ja-JP.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "音量を3％以下に設定する際の0％へのスナップを無効化します",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "自動セーフモード",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "チートが有効な場合のみセーフモードを有効にします",
   "UNIVERSAL/HACK_FAST_CHESTS": "高速チェスト",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "チェストのアニメーションを高速化します",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "トランジションなし",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "シーントランジション時間を0秒に短縮します",
-  "UNIVERSAL/HACK_SAFE_MODE": "セーフモード",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "レベルの進行、完了、および検証を無効化します",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "セーフモードポップアップ",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "チートが有効な場合、レベルに入る前に警告します",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "オクターブ",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "自動セーフモード",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "チートが有効な場合のみセーフモードを有効にします",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "セーフモード",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "レベルの進行、完了、および検証を無効化します",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "セーフモードポップアップ",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "チートが有効な場合、レベルに入る前に警告します",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
