--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "음량을 3% 이하로 설정할 때 0%로 자동 설정되는 현상을 제거합니다.",
   "UNIVERSAL/HACK_COMPACT_LISTS": "리스트 축소",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "레벨 목록과 프로필 댓글의 세로 높이를 줄입니다.",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "자동 안전 모드",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "치트가 활성화된 경우에만 안전 모드를 활성화합니다.",
   "UNIVERSAL/HACK_FAST_CHESTS": "빠른 상자 열기",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "상자 애니메이션 속도를 높입니다.",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "오디오를 메모리에 로드",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "음악의 페이드 아웃을 비활성화합니다. By Beat",
   "UNIVERSAL/HACK_NO_TRANSITION": "전환 비활성화",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "장면 전환 시간을 0초로 단축합니다.",
-  "UNIVERSAL/HACK_SAFE_MODE": "안전 모드",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "레벨 진행도, 클리어와 베리파이를 비활성화합니다.",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "안전 모드 팝업",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "치트가 활성화된 경우 레벨에 들어가기 전에 경고합니다.",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "투명 리스트",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "리스트 보기에서 배경을 제거합니다.",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "옥타브",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "지속 시간 (초)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "지속 시간",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "초",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "자동 안전 모드",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "치트가 활성화된 경우에만 안전 모드를 활성화합니다.",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "안전 모드",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "레벨 진행도, 클리어와 베리파이를 비활성화합니다.",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "안전 모드 팝업",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "치트가 활성화된 경우 레벨에 들어가기 전에 경고합니다.",
   "INTERFACE": "인터페이스",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "엔드스크린 치트 숨기기",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "엔드스크린 추가 기능 숨기기",
