--- a/langs/lt-LT.json
+++ b/langs/lt-LT.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Pašalina slankiklio nušokimą į 0% norint nustatyti garsumą į 3% ar žemiau",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Automatinis Saugus Režimas",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Įjungia saugų režimą esant įjungtai pagalbinei įrangai",
   "UNIVERSAL/HACK_FAST_CHESTS": "Greitos Skrynios",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Pagreitina skrynios atidarymo animaciją",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Išjungti Perėjimus",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Sutrumpina langų perėjimus iki 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Saugus Režimas",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Išjungia progreso saugojimą, lygių įveikimą ir patvirtinimą",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Saugaus Režimo Iškilasis Langas",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Perspėja žaidėją prieš įeinant į lygį, jog pagalbinė įranga yra įjungta",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oktavai",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automatinis Saugus Režimas",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Įjungia saugų režimą esant įjungtai pagalbinei įrangai",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Saugus Režimas",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Išjungia progreso saugojimą, lygių įveikimą ir patvirtinimą",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Saugaus Režimo Iškilasis Langas",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Perspėja žaidėją prieš įeinant į lygį, jog pagalbinė įranga yra įjungta",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
