--- a/langs/nb-NO.json
+++ b/langs/nb-NO.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Fjerner knips til 0% når man setter lydnivået til 3% eller lavere",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Automatisk Trygghets-modus",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Aktiverer trygghets-modus bare når juks er slått på",
   "UNIVERSAL/HACK_FAST_CHESTS": "Raske kister",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Gjør kisteåpnings-animasjonen raskere",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Ingen Overgang",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Forkorter sceneovergangstid til 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Trygg Modus",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Deaktiverer progresjon, fullføring og godkjenning av nivåer",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Trygghets-modus Vindu",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Advarer før man går i nivået at juks er slått på",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oktaver",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automatisk Trygghets-modus",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Aktiverer trygghets-modus bare når juks er slått på",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Trygg Modus",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Deaktiverer progresjon, fullføring og godkjenning av nivåer",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Trygghets-modus Vindu",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Advarer før man går i nivået at juks er slått på",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
