--- a/langs/nl-NL.json
+++ b/langs/nl-NL.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Verwijdert het snappen naar 0% bij het instellen van het volume op 3% of lager",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Automatische Veilige Modus",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Schakelt de veilige modus alleen in als cheats zijn ingeschakeld",
   "UNIVERSAL/HACK_FAST_CHESTS": "Snelle Kisten",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Versnelt de borstanimatie",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Geen Transitie",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Verkort de scène-overgangstijd naar 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Veilige Modus",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Schakelt voortgang, voltooiing en verificatie van niveaus uit",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Pop-up Veilige Modus",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Waarschuwt voordat je een level betreedt als cheats zijn ingeschakeld",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Octaven",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automatische Veilige Modus",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Schakelt de veilige modus alleen in als cheats zijn ingeschakeld",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Veilige Modus",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Schakelt voortgang, voltooiing en verificatie van niveaus uit",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Pop-up Veilige Modus",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Waarschuwt voordat je een level betreedt als cheats zijn ingeschakeld",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
