--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Usuwa przyciąganie do 0 przy ustawianiu głośności na 3% lub poniżej",
   "UNIVERSAL/HACK_COMPACT_LISTS": "Kompaktowe Listy",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Zmniejsza wysokość linijek w listach poziomów i komentarzach",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Auto Tryb Bezpieczny",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Włącza tryb bezpieczny tylko wtedy, gdy włączone są cheaty",
   "UNIVERSAL/HACK_FAST_CHESTS": "Szybkie Skrzynie",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Przyspiesza animację skrzyń",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Wczytaj Audio Do Pamięci",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Wyłącza płynne wyciszanie (zanikanie) piosenek. Autorstwa Beat",
   "UNIVERSAL/HACK_NO_TRANSITION": "Wyłącz Przejścia",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Skraca czas przejścia między scenami do 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Tryb Bezpieczny",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Wyłącza postęp, ukańczanie i weryfikację poziomów",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Popup Trybu Bezpiecznego",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Ostrzega przed wejściem do poziomy gdy włączone są cheaty",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Przezroczyste Listy",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Usuwa tło z widoku list",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oktawy",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Czas (s)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Czas",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Auto Tryb Bezpieczny",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Włącza tryb bezpieczny tylko wtedy, gdy włączone są cheaty",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Tryb Bezpieczny",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Wyłącza postęp, ukańczanie i weryfikację poziomów",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Popup Trybu Bezpiecznego",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Ostrzega przed wejściem do poziomy gdy włączone są cheaty",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
