--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Remove o estalo para 0% quando definir o volume para 3% ou abaixo",
   "UNIVERSAL/HACK_COMPACT_LISTS": "Listas compactas",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Reduz o tamanho das listas de níveis e comentários de perfis",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Habilita o Modo Seguro apenas quando os cheats estão ativadas",
   "UNIVERSAL/HACK_FAST_CHESTS": "Baús Rápidos",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Acelera a animação do baú",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Carregar áudio para memória",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Impede o fade out da música de fundo ao pausar ou completar uma fase",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sem Transição",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Diminui o tempo de transição de cena para 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Modo Seguro",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Desabilita o progresso, conclusão e verificação de fases",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Popup de Modo Seguro",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Avisa antes de entrar em uma fase se os cheats estiverem ativados",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oitavas",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Habilita o Modo Seguro apenas quando os cheats estão ativadas",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Modo Seguro",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Desabilita o progresso, conclusão e verificação de fases",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Popup de Modo Seguro",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Avisa antes de entrar em uma fase se os cheats estiverem ativados",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
