--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Разрешает ставить значение гроскости музыки без ограничения / округления",
   "UNIVERSAL/HACK_COMPACT_LISTS": "Компактные листы",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Уменьшает расстояние высоту уровней и комментариев в листах",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Автоматический безопасный режим",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Автоматически включает безопасный режим в случае, если включены читы",
   "UNIVERSAL/HACK_FAST_CHESTS": "Быстрые сундуки",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Ускоряет анимацию открытия сундуков",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Грузить музыку в память",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Отключает затухание музыки в конце уровня. Сделано Beat",
   "UNIVERSAL/HACK_NO_TRANSITION": "Без переходов",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Удаляет время перехода мужду сценами",
-  "UNIVERSAL/HACK_SAFE_MODE": "Безопасный режим",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Отключает прогресс, верификацию и прохождение уровней",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Окно безопасного режима",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Показывает предупреждающее окно при входе в уровень в случае, если включены читы",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Прозрачные списки",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Удаляет фон у списков при их просмотре",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Октавы",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Длительность (с)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Длительность",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "с",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Автоматический безопасный режим",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Автоматически включает безопасный режим в случае, если включены читы",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Безопасный режим",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Отключает прогресс, верификацию и прохождение уровней",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Окно безопасного режима",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Показывает предупреждающее окно при входе в уровень в случае, если включены читы",
   "INTERFACE": "Интерфейс",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "Скрыть читы при прохождении",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Скрыть экстра",
@@ -598,7 +599,7 @@
   "STATUS/CPS/DROPDOWN/MAX": "Показать максимальное количество кликов в секунду",
   "STATUS/CPS/DROPDOWN/TOTAL": "Общее количество кликов",
   "STATUS/BEST_RUN/ENABLED": "Лучший прогресс",
-  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "Точные проценты", 
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "Точные проценты",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Точность",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Показывать префикс",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Смерти",
