--- a/langs/sv-SE.json
+++ b/langs/sv-SE.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Tillåter volymen att sänkas till tre procent eller lägre",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Automatiskt säkert läge",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Aktiverar säkert läge endast när fusk är aktiverat",
   "UNIVERSAL/HACK_FAST_CHESTS": "Snabba kistor",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Påskyndar kistanimationen",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Ingen övergång",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Förkortar scenövergångstiden till 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Säkert läge",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Förhindrar framsteg, avklarandet och verifiering av nivåer",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Säkert läge-popup",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Varnar innan en nivå öppnas om fusk är aktiverat",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oktaver",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automatiskt säkert läge",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Aktiverar säkert läge endast när fusk är aktiverat",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Säkert läge",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Förhindrar framsteg, avklarandet och verifiering av nivåer",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Säkert läge-popup",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Varnar innan en nivå öppnas om fusk är aktiverat",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
