--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Ses seviyesini %3 veya altına ayarlarken %0'a oturtmayı kaldırır",
   "UNIVERSAL/HACK_COMPACT_LISTS": "Kompakt Listeler",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Seviye listeleri ve profil yorumlarının yüksekliğini azaltır",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Otomatik Güvenli Mod",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Güvenli Modu yalnızca hileler etkinleştirildiğinde etkinleştirir",
   "UNIVERSAL/HACK_FAST_CHESTS": "Hızlı Sandıklar",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Sandık animasyonunu hızlandırır",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Sesi Belleğe Yükle",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sahne Geçişi Yok",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Sahne geçiş süresini 0s'ye kısaltır",
-  "UNIVERSAL/HACK_SAFE_MODE": "Güvenli Mod",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Seviyelerin ilerlemesini, tamamlanmasını ve doğrulanmasını devre dışı bırakır",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Güvenli Mod Açılır Penceresi",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Hileler etkinse bir seviyeye girmeden önce uyarır",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Saydam Listeler",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Listelerin arkaplanını kaldırır",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oktavlar",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Süre (s)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Süre",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Otomatik Güvenli Mod",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Güvenli Modu yalnızca hileler etkinleştirildiğinde etkinleştirir",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Güvenli Mod",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Seviyelerin ilerlemesini, tamamlanmasını ve doğrulanmasını devre dışı bırakır",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Güvenli Mod Açılır Penceresi",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Hileler etkinse bir seviyeye girmeden önce uyarır",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
