--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Sửa việc âm lượng tự về 0% khi chỉnh âm lượng xuống 3% hoặc thấp hơn",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Safe Mode tự động",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Tự kích hoạt Safe Mode khi các cheat được bật",
   "UNIVERSAL/HACK_FAST_CHESTS": "Mở rương nhanh",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Tăng tốc độ hiệu ứng mở rương",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Tắt transition",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Cho hết tất cả các transition về 0 giây",
-  "UNIVERSAL/HACK_SAFE_MODE": "Chế độ an toàn",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Hủy bỏ các progress, việc hoàn tất & verify level",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Safe Mode Popup",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Cảnh bảo trước khi chơi level mà đang bật cheat",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Quãng",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Safe Mode tự động",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Tự kích hoạt Safe Mode khi các cheat được bật",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Chế độ an toàn",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Hủy bỏ các progress, việc hoàn tất & verify level",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Safe Mode Popup",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Cảnh bảo trước khi chơi level mà đang bật cheat",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
