--- a/langs/zh-CN.json
+++ b/langs/zh-CN.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "去除0%至3%音量的阈值",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "自动安全模式",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "做一个不作弊的legit玩家",
   "UNIVERSAL/HACK_FAST_CHESTS": "快速开箱",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "加速箱子的动画",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "无过场动画",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "去除游戏内的过场动画",
-  "UNIVERSAL/HACK_SAFE_MODE": "安全模式",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "不计入关卡的进度、完成和verify",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "安全模式弹窗",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "进入关卡前会弹窗警告作弊已开启",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "透明列表",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "使关卡列表透明",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "音调",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "持续时间(秒)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "时间",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "秒",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "自动安全模式",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "做一个不作弊的legit玩家",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "安全模式",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "不计入关卡的进度、完成和verify",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "安全模式弹窗",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "进入关卡前会弹窗警告作弊已开启",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
