--- a/langs/ar-SA.json
+++ b/langs/ar-SA.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "يزيل التقاطيع إلى 0٪ عند ضبط مستوى الصوت إلى 3٪ أو أقل",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "الوضع الآمن التلقائي",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "يمكّن الوضع الآمن فقط عند تمكين الغش",
   "UNIVERSAL/HACK_FAST_CHESTS": "الصدور السريعة",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "يسرع رسوم الصدر المتحركة",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "لا يوجد انتقال",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "يقصر وقت انتقال المشهد إلى 0 ثانية",
-  "UNIVERSAL/HACK_SAFE_MODE": "الوضع الآمن",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "يعطل تقدم وإكمال وتحقق المستويات",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "نافذة الوضع الآمن المنبثقة",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "يحذر قبل الدخول إلى مستوى إذا تم تمكين الغش",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "النبضة",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "الوضع الآمن التلقائي",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "يمكّن الوضع الآمن فقط عند تمكين الغش",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "الوضع الآمن",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "يعطل تقدم وإكمال وتحقق المستويات",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "نافذة الوضع الآمن المنبثقة",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "يحذر قبل الدخول إلى مستوى إذا تم تمكين الغش",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
