--- a/langs/es-AR.json
+++ b/langs/es-AR.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Saca el volumen fijado a 0% al cambiar el volumen a 3% o menos",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Activa el modo seguro sólo cuando los hacks están activados",
   "UNIVERSAL/HACK_FAST_CHESTS": "Cofres rápidos",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Acelera la animación de abrir los cofres",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sin transiciones",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Fija la duración de las transiciones a 0s",
-  "UNIVERSAL/HACK_SAFE_MODE": "Modo Seguro",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Desactiva el progreso, verificación y finalización de niveles",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Popup del Modo Seguro",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Avisa antes de entrar a un nivel si algún hack está activado",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Octavas",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Activa el modo seguro sólo cuando los hacks están activados",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Modo Seguro",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Desactiva el progreso, verificación y finalización de niveles",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Popup del Modo Seguro",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Avisa antes de entrar a un nivel si algún hack está activado",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
