--- a/langs/et-EE.json
+++ b/langs/et-EE.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Välistab klõpsamise 0%-le, kui helitugevus on seatud 3%-le või vähem",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Automaatne Turvarežiimi",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Lubab turvarežiimi ainult siis, kui pettused on lubatud",
   "UNIVERSAL/HACK_FAST_CHESTS": "Kiired Kirst",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Kiirendab rindkere animatsiooni",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Ülekannet pole",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Vähendab stseeni ülemineku aega nullini",
-  "UNIVERSAL/HACK_SAFE_MODE": "Turvarežiimi",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Keelab tasemel edasiliikumise, läbimise ja kinnitamise",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Turvarežiimi Popup",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Hoiatab enne tasemele sisenemist, kui pettused on lubatud",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Oktaavid",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automaatne Turvarežiimi",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Lubab turvarežiimi ainult siis, kui pettused on lubatud",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Turvarežiimi",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Keelab tasemel edasiliikumise, läbimise ja kinnitamise",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Turvarežiimi Popup",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Hoiatab enne tasemele sisenemist, kui pettused on lubatud",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
