--- a/langs/ga-IE.json
+++ b/langs/ga-IE.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Baintear snapping go 0% nuair a shocraítear toirt go 3% nó níos lú",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Mód Auto Sábháilte",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Ní féidir Mód Sábháilte a chumasú ach amháin nuair a bhíonn aicearra cumasaithe",
   "UNIVERSAL/HACK_FAST_CHESTS": "Cófraí tapa",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Luasaíonn sé an beochan cófra",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Gan Aistriú",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Giorraíonn trasdul radharc go 0 soicind",
-  "UNIVERSAL/HACK_SAFE_MODE": "Mód Sábháilte",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Díchumasaítear dul chun cinn, críochnú agus fíorú na leibhéal",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Pop-suas Mód Sábháilte",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Tugann sé rabhadh sula dtéann tú isteach i leibhéal má tá aicearra cumasaithe.",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Ochtach",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Mód Auto Sábháilte",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Ní féidir Mód Sábháilte a chumasú ach amháin nuair a bhíonn aicearra cumasaithe",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Mód Sábháilte",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Díchumasaítear dul chun cinn, críochnú agus fíorú na leibhéal",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Pop-suas Mód Sábháilte",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Tugann sé rabhadh sula dtéann tú isteach i leibhéal má tá aicearra cumasaithe.",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
