--- a/langs/kk-KZ.json
+++ b/langs/kk-KZ.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Дыбыс деңгейін 3% немесе одан төмен орнатқан кезде 0% байланыстыруды жояды",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Авто Қауіпсіз режим",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Тек читтер қосылған кезде қауіпсіз режимді қосады",
   "UNIVERSAL/HACK_FAST_CHESTS": "Жылдам сандықтар",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Анимацияны кеуде анимациясын жылдамдатады",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "Өтулерді өшіру",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Көріністер арасындағы ауысу уақытын 0с дейін қысқартады",
-  "UNIVERSAL/HACK_SAFE_MODE": "Қауіпсіз режим",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Прогресті, аяқтауды және деңгейлерді тексеруді өшіреді",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Қауіпсіз режим қалқымалы терезесі",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Егер читтер қосылса, деңгейге кірер алдында ескертеді",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Октавалар",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Авто Қауіпсіз режим",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Тек читтер қосылған кезде қауіпсіз режимді қосады",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Қауіпсіз режим",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Прогресті, аяқтауды және деңгейлерді тексеруді өшіреді",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Қауіпсіз режим қалқымалы терезесі",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Егер читтер қосылса, деңгейге кірер алдында ескертеді",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
