--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "Не дає поставити гучність звуку на 0%, коли намагаються змінити гучність на 3% або нижче",
   "UNIVERSAL/HACK_COMPACT_LISTS": "Компактні списки",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "Зменшує висоту списку рівнів та списку коментарів у профілі",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "Автом. безпечний режим",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Автоматично вмикає безпечний режим, але тільки коли ввімкнені чити",
   "UNIVERSAL/HACK_FAST_CHESTS": "Швидкі скрині",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Пришвидшує анімацію відкриття скринь",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Збереження аудіо в пам'яті",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Деактивує затухання музики (респект Beat за фічу)",
   "UNIVERSAL/HACK_NO_TRANSITION": "Деакт. переходів",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Змінює час переходів між сценами на 0 с",
-  "UNIVERSAL/HACK_SAFE_MODE": "Безпечний режим",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "Заморожує прогрес, а також не зараховує проходження/верифікацію рівнів",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "Знак безпечного режиму",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "Попереджує про безпечний режим перед входом у рівень, якщо ввімкнені чити",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Прозорі списки",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "Прибирає фон у списків (роблячи його прозорим)",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "Октава",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Тривалість (с)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Тривалість",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "с",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Автом. безпечний режим",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Автоматично вмикає безпечний режим, але тільки коли ввімкнені чити",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "Безпечний режим",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Заморожує прогрес, а також не зараховує проходження/верифікацію рівнів",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Знак безпечного режиму",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Попереджує про безпечний режим перед входом у рівень, якщо ввімкнені чити",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
