--- a/langs/zh-HK.json
+++ b/langs/zh-HK.json
@@ -414,8 +414,6 @@
   "UNIVERSAL/HACK_ALLOW_LOW_VOLUME/TIP": "音量設置爲3%或以下時, 不會捕捉到0%",
   "UNIVERSAL/HACK_COMPACT_LISTS": "",
   "UNIVERSAL/HACK_COMPACT_LISTS/TIP": "",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE": "自動安全模式",
-  "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "如果有開戶任何作弊, 自動開戶安全模式",
   "UNIVERSAL/HACK_FAST_CHESTS": "快速開箱",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "加速箱子的動畫",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
@@ -428,10 +426,6 @@
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "無場景轉場",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "場景轉場時間調成零秒鐘",
-  "UNIVERSAL/HACK_SAFE_MODE": "安全模式",
-  "UNIVERSAL/HACK_SAFE_MODE/TIP": "不讓玩家完成、進步、證明完成關卡",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP": "安全模式彈窗",
-  "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "進入關卡前會彈窗警告作弊已開啓",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "透明列表",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS/TIP": "使關卡列表透明",
   "UNIVERSAL/PITCH_SHIFTER/DROPDOWN/PITCH": "八度",
@@ -483,6 +477,13 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "持續時間(秒)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "持續",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
+  "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "自動安全模式",
+  "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "如果有開戶任何作弊, 自動開戶安全模式",
+  "CHEAT_SAFETY/HACK_SAFE_MODE": "安全模式",
+  "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "不讓玩家完成、進步、證明完成關卡",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "安全模式彈窗",
+  "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "進入關卡前會彈窗警告作弊已開啓",
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
